--- a/app/assets/stylesheets/global/songs.css.scss
+++ b/app/assets/stylesheets/global/songs.css.scss
@@ -2,7 +2,7 @@
 
 .playlist {
   clear: both;
-  margin: 0 0 20px;
+  margin: 0 0 18px;
   
   section {
     padding: 10px 0;
