--- a/app/assets/stylesheets/global/stations.css.scss
+++ b/app/assets/stylesheets/global/stations.css.scss
@@ -1,14 +1,11 @@
 @import "mixins.css.scss";
 
 .shelf {
-  margin: 20px;
-  margin-bottom: 10px;
-  padding: 10px 0;
+  margin: 0 20px 18px;
   
   h3 {
     position: relative;
     z-index: 10;
-    margin-top: -10px;
   }
   
   ul {
